--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^2.0.16"
+    "nodemon": "^2.0.16",
+    "sequelize-cli": "^6.4.1"
   },
   "dependencies": {
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "sequelize": "^6.20.1",
-    "sequelize-cli": "^6.4.1"
+    "mysql2": "^2.3.3",
+    "sequelize": "^6.20.1"
   }
 }
