--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "sequelize-cli": "^6.4.1"
   },
   "dependencies": {
+    "body-parser": "^1.20.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mysql2": "^2.3.3",
